--- a/src/app/total-calls/total-calls.component.html
+++ b/src/app/total-calls/total-calls.component.html
@@ -70,7 +70,7 @@
                   font-weight-bolder
                   opacity-7
                 ">
-                Destination
+                Destinations
               </th>
               <th class="
                   text-uppercase text-center text-secondary text-xxs
