- corrected DIST NO. - Opening payu in another tab

--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -18,7 +18,7 @@
         </h6>
         <div class="vl"></div>
         <h6 class="p-1 m-1" style="line-height: normal; text-align: center;">DST No: <br><span class=" p-1 m-1" style="    color: #3ea1ec;
-          ">{{userDetails?.alloted_did?.did_no}}</span>
+          ">{{userDetails?.alloted_did}}</span>
         </h6>
         <style>
           .vl {
