--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -25,7 +25,7 @@
               </div>
             </div>
 
-          <!--       
+          <!--
             <div class="col-md-3 col-6">
               <div class="card border card-plain border-radius-lg">
                 <div class="card-header mx-4 p-3 text-center">
@@ -171,7 +171,7 @@
     </div>
   </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-7 mt-4">
     <div class="card h-100">
       <div class="card-header pb-0 px-3">
@@ -277,8 +277,8 @@
       </div>
     </div>
   </div>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
   <div class="col-md-4 mt-4">
     <div class="card h-100 mb-4">
       <div class="card-header pb-0 px-3">
@@ -386,4 +386,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
