--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -97,6 +97,16 @@
           <span class="nav-link-text ms-1">Notifications</span>
         </a>
       </li> -->
+
+      <li class="nav-item">
+        <a class="nav-link text-dark" routerLink="/allinvoice" routerLinkActive="active   bg-gradient-primary">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">receipt_long</i>
+          </div>
+          <span class="nav-link-text font-weight-bold ms-1">Invoice</span>
+        </a>
+      </li>
+
       <li class="nav-item mt-3">
         <h6 class="ps-4 ms-2 text-uppercase text-xs text-dark font-weight-bolder opacity-8">Account pages</h6>
       </li>
