--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="row mb-4">
+    <!-- <div class="row mb-4">
       <div class="col-lg-8 col-md-6 mb-md-0 mb-4">
         <div class="card">
           <div class="card-header pb-0">
@@ -508,7 +508,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- footer -->
 
 
